--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -6,6 +6,7 @@
   top: 0 !important;
   left: 50% !important;
   transform: translate(-50%) !important;
+  max-width: 40px;
 }
 .navbar__up-arrow * {
   color: var(--muted) !important;
